View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026232 | Community | OCCT:Modeling Data | public | 2015-05-19 00:37 | 2015-10-23 20:51 |
Reporter | Aaron Michalk | Assigned To | bugmaster | ||
Priority | normal | Severity | crash | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2013 | ||
Product Version | 6.8.0 | ||||
Target Version | 6.9.1 | Fixed in Version | 6.9.1 | ||
Summary | 0026232: Multithreaded crash in IntAna_Int3Pln::Perform due to statics | ||||
Description | Intermittently a crash occurs in IntAna_Int3Pln::Perform when called simultaneously by multiple threads. Crash is due to initialization of local statics inside the function. | ||||
Steps To Reproduce | N/A | ||||
Additional information and documentation updates | Statics local to a function are not thread safe. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Statics were introduced in 6.8.0. |
|
Branch CR26232 has been created by abv. SHA-1: 3d632a6e008be4c9ce59a6fd37163d6ddad8e4a6 Detailed log of new commits: Author: abv Date: Tue May 19 07:10:35 2015 +0300 0026232: Multithreaded crash in IntAna_Int3Pln::Perform due to statics "Static" keyword removed from local variable declarations in IntAna_Int3Pln::Perform() |
|
Fix pushed to CR26232, please review. Note that this statement: > Statics were introduced in 6.8.0. is false: they were present since at least beginning of OCCT Git history (6.5.0) |
|
Reviewed. |
|
Branch CR26232 has been updated forcibly by mkv. SHA-1: 96e5214d92191d0da1c9cf4d6332db61567907f4 |
|
Dear BugMaster, Branch CR26232 was rebased on current master of occt git-repository. SHA-1: 96e5214d92191d0da1c9cf4d6332db61567907f4 |
|
Dear BugMaster, Branch CR26232 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 96e5214d92191d0da1c9cf4d6332db61567907f4 Number of compiler warnings: occt component : Linux: 25 Windows: 0 (0 on master) products component : Linux: 37 Windows: 0 (0 on master) Regressions/Differences: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 99781591 / 100379567 [-0.60%] Total CPU difference: 19002.0800000001 / 19460.760000000177 [-2.36%] products component : Total MEMORY difference: 24182906 / 24391409 [-0.85%] Total CPU difference: 7877.820000000015 / 7582.950000000026 [+3.89%] Testing on Windows: occt component : Total MEMORY difference: 59014740 / 59221168 [-0.35%] Total CPU difference: 17156.24117519893 / 16976.543623298945 [+1.06%] products component : Total MEMORY difference: 15655131 / 15659790 [-0.03%] Total CPU difference: 6639.730162100001 / 6569.170909799987 [+1.07%] There are no differences in images found by testdiff. |
|
Branch CR26232 has been deleted by inv. SHA-1: 96e5214d92191d0da1c9cf4d6332db61567907f4 |
occt: master 7e59624d 2015-05-19 04:10:35
Committer: bugmaster Details Diff |
0026232: Multithreaded crash in IntAna_Int3Pln::Perform due to statics "Static" keyword removed from local variable declarations in IntAna_Int3Pln::Perform() |
Affected Issues 0026232 |
|
mod - src/IntAna/IntAna_Int3Pln.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-05-19 00:37 | Aaron Michalk | New Issue | |
2015-05-19 00:37 | Aaron Michalk | Assigned To | => msv |
2015-05-19 00:38 | Aaron Michalk | Note Added: 0041260 | |
2015-05-19 07:11 | git | Note Added: 0041261 | |
2015-05-19 07:14 |
|
Note Added: 0041262 | |
2015-05-19 07:14 |
|
Status | new => resolved |
2015-05-19 07:14 |
|
Target Version | => 7.0.0 |
2015-05-19 07:14 |
|
Steps to Reproduce Updated | |
2015-05-19 10:52 |
|
Note Added: 0041264 | |
2015-05-19 10:52 |
|
Assigned To | msv => bugmaster |
2015-05-19 10:52 |
|
Status | resolved => reviewed |
2015-05-19 12:18 |
|
Assigned To | bugmaster => mkv |
2015-05-19 12:21 | git | Note Added: 0041270 | |
2015-05-20 14:30 |
|
Note Added: 0041312 | |
2015-05-20 14:30 |
|
Note Added: 0041313 | |
2015-05-20 14:30 |
|
Assigned To | mkv => bugmaster |
2015-05-20 14:30 |
|
Status | reviewed => tested |
2015-05-20 14:30 |
|
Test case number | => Not needed |
2015-05-22 12:19 | bugmaster | Changeset attached | => occt master 7e59624d |
2015-05-22 12:19 | bugmaster | Status | tested => verified |
2015-05-22 12:19 | bugmaster | Resolution | open => fixed |
2015-08-14 11:01 | git | Note Added: 0044273 | |
2015-08-26 11:11 |
|
Target Version | 7.0.0 => 6.9.1 |
2015-10-16 14:56 |
|
Status | verified => closed |
2015-10-23 20:51 |
|
Fixed in Version | => 6.9.1 |