0026232: Multithreaded crash in IntAna_Int3Pln::Perform due to statics

"Static" keyword removed from local variable declarations in IntAna_Int3Pln::Perform()